<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Tomas Joelsson

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
  <string name="app_name">Graphitoid</string>
  <string name="settings_menu_targets">Select Targets</string>
  <string name="settings_http_user_summary">HTTP Username</string>
  <string name="settings_http_pass_summary">HTTP Password</string>
  <string name="targets_menu_recent_range">Recent Data</string>
  <string name="targets_menu_datetime">Date Range</string>
  <string name="targets_menu_saved">Saved Graphs</string>
  <string name="targets_menu_reload">Reload Targets</string>
  <string name="targets_menu_clear">Clear Selection</string>
  <string name="targets_menu_plot">Plot Graph</string>
  <string name="graph_menu_reload">Reload</string>
  <string name="graph_menu_auto_refresh">Auto-Refresh</string>
  <string name="graph_menu_edit">Edit</string>
  <string name="graph_menu_save">Save</string>
  <string name="edit_context_menu_add">Add</string>
  <string name="edit_context_menu_edit">Edit</string>
  <string name="edit_context_menu_remove">Remove</string>
  <string name="edit_context_menu_apply">Apply Function</string>
  <string name="edit_context_menu_undo">Undo Function</string>
  <string name="edit_context_menu_function_combine">Combine</string>
  <string name="edit_context_menu_function_transform">Transform</string>
  <string name="edit_context_menu_function_calculate">Calculate</string>
  <string name="edit_context_menu_function_filter">Filter</string>
  <string name="edit_context_menu_function_special">Special</string>
  <string name="edit_context_menu_function_scale">Scale</string>
  <string name="edit_context_menu_function_derivative">Derivative</string>
  <string name="edit_context_menu_function_integral">Integral</string>
  <string name="edit_context_menu_function_absolute">Absolute Value</string>
  <string name="edit_context_menu_function_moving_average">Moving Average</string>
  <string name="edit_context_menu_function_moving_median">Moving Median</string>
  <string name="edit_context_menu_function_moving_standard_deviation">Moving Standard Deviation</string>
  <string name="edit_context_menu_function_holtwinters_forecast">Holt-Winters Forecast</string>
  <string name="edit_context_menu_function_holtwinters_confidence_bands">Holt-Winters Confidence Bands</string>
  <string name="edit_context_menu_function_holtwinters_aberration">Holt-Winters Aberration</string>
  <string name="edit_context_menu_function_as_percent">As Percent</string>
  <string name="set_preferences">Settings</string>
  <string name="connection_error">Connection failed. Try changing the server URL.</string>
  <string name="update_settings_error">Something went wrong. Check settings.</string>
  <string name="no_settings_error">Start by setting your preferences.</string>
  <string name="interval_from_header">Select Date Range Start</string>
  <string name="interval_to_header">Select Date Range End</string>
  <string name="auto_refresh_dialog_title">Set Auto-Refresh</string>
  <string name="recent_range_dialog_title">Select a Recent Time Range</string>
  <string name="save_dialog_title">Save Graph</string>
  <string name="dialog_positive">OK</string>
  <string name="dialog_negative">Cancel</string>
  <string name="saved_dialog_delete">Delete</string>
  <string name="graph_saved_message">Graph saved</string>
  <string name="function_instructions_scale">Please enter a scale factor</string>
  <string name="function_instructions_moving_average">Moving average for the last ___ data points</string>
  <string name="function_instructions_moving_median">Moving median for the last ___ data points</string>
  <string name="function_instructions_moving_standard_deviation">Moving standard deviation for the last ___ data points</string>
  <string name="function_instructions_as_percent">Please enter the value that corresponds to 100% or leave blank to use the total</string>
</resources>
